feat: add plans and assign Basic to new tenant
- Adicao do modelo Plan com colecao ordenada de funcionalidades. - Dados iniciais (seed) dos planos Basic, Plus e Premium. - Remocao do modelo temporario Tier. - Obrigatoriedade do vinculo de plano por tenant.